# esp_camera_robo_car

./: .gitignore  Agents.md  CMakeLists.txt  README.md  ReadMe.md  main.py  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  camera_init.c  camera_init.h  camera_pins.h  http_stream.c  http_stream.h  idf_component.yml  main.c  wifi_init.c  wifi_init.h
oldMain/: CMakeLists_for_hello_from_esp.txt  VGA_good_camera_init.c  VGA_good_camera_init.h  currentCamera_init.c  currentHttp_stream.c  http_stream_hello_from_esp.c  wifi_init_2.c
oldMain/QVGA_fles/: camera_init.c  camera_init.h  main.c
